--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
       <div class="container footer-container">
         <p class="copyright">&copy; Copyright 2020</p>
 
-        <ul class="footer-list overtitle">
+        <ul class="footer-list overtitle-light">
           <li class="footer-item">
             <a
               class="social-link"
