--- a/index.html
+++ b/index.html
@@ -266,25 +266,25 @@
           <ul class="advantages-list">
             <li class="advantages-item">
               <span class="advantage-span">600<sup class="sup">+</sup></span>
-              <p class="advantages-item-text overtitle-light">
+              <p class="advantages-item-text">
                 Довольных клиентов в день
               </p>
             </li>
             <li class="advantages-item">
               <span class="advantage-span">50<sup class="sup">+</sup></span>
-              <p class="advantages-item-text overtitle-light">
+              <p class="advantages-item-text">
                 Наград за отличный сервис
               </p>
             </li>
             <li class="advantages-item">
               <span class="advantage-span">20<sup class="sup">+</sup></span>
-              <p class="advantages-item-text overtitle-light">
+              <p class="advantages-item-text">
                 Лучших мастеров Киева
               </p>
             </li>
             <li class="advantages-item">
               <span class="advantage-span">100<sup class="sup">+</sup></span>
-              <p class="advantages-item-text overtitle-light">
+              <p class="advantages-item-text">
                 Подарков постоянным клиентам
               </p>
             </li>
